# mod_ivs

./: README.md
sources/: Makefile.am  ivs_asyncj.c  ivs_curl.c  ivs_curl.h  ivs_events.c  ivs_events.h  ivs_playback.c  ivs_playback.h  ivs_qjs.c  ivs_qjs.h  js_chatgpt.c  js_curl.c  js_file.c  js_gcpasr.c  js_ivs.c  js_ivs_hlp.c  js_ivs_hlp.h  js_ivs_wrp.c  js_ivs_wrp.h  js_session.c  js_whisper.c  mod_ivs.c  mod_ivs.h  utils.c
sources/conf/autoload_configs/: ivs.conf.xml
sources/conf/dialplan/: ivs_dialplan.xml
sources/examples/: chatgpt.js  curl.js  curl1.js
sources/scripts/: chatgpt.js
